RESOLVED FIXED12763
REGRESSION: button title is displayed incorrectly at quotes.burntelectrons.org
https://bugs.webkit.org/show_bug.cgi?id=12763
Summary REGRESSION: button title is displayed incorrectly at quotes.burntelectrons.org
Alexey Proskuryakov
Reported 2007-02-13 10:44:04 PST
This page is now served as XHTML to us (since WebKit indicates that it supports it in its Accept header), and that uncovered a bug in parsing HTML entities in XHTML. Fix forthcoming.
Attachments
proposed fix (4.02 KB, patch)
2007-02-13 11:30 PST, Alexey Proskuryakov
mrowe: review+
Alexey Proskuryakov
Comment 1 2007-02-13 11:30:45 PST
Created attachment 13151 [details] proposed fix
Mark Rowe (bdash)
Comment 2 2007-02-13 18:44:36 PST
Comment on attachment 13151 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2007-02-13 21:34:41 PST
Committed revision 19619.
Lucas Forschler
Comment 4 2019-02-06 09:02:38 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.