        Reviewed by Mark Rowe.

http://bugs.webkit.org/show_bug.cgi?id=12763
        REGRESSION: button title is displayed incorrectly at quotes.burntelectrons.org

        Test: fast/parser/entities-in-attributes.xhtml

        * dom/XMLTokenizer.cpp:
        (WebCore::getEntityHandler): Set a correct type for the found entity (I'm not really
        sure if XML_INTERNAL_GENERAL_ENTITY is _the_ correct one, but it fixes the problem).



Canonical link: https://commits.webkit.org/16495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19619 268f45cc-cd09-0410-ab3c-d52691b4dbfc